SERVER-14607 do not discard data while merging working set members for index intersection